--- a/frontend/assets/stylesheets/nav/_pop-up.scss
+++ b/frontend/assets/stylesheets/nav/_pop-up.scss
@@ -6,7 +6,6 @@
     position: absolute;
     top: 0;
     clear: both;
-    z-index: 100;
     @include rem((
         padding: ($gs-baseline/3)*2 0
     ));
